# depface

./: .gitignore  CLAUDE.md  Cargo.toml  SPEC.md  interface.md
.claude/: settings.local.json
front/: index.html  package-lock.json  package.json  vite.config.ts
front/src/: App.tsx  index.css
front/src/api/: client.ts
front/src/components/: AppLayout.tsx
front/src/contexts/: AuthContext.tsx
front/src/pages/: DocPage.tsx  InterfacePage.tsx  LoginPage.tsx  MenuPage.tsx  PropertyAddPage.tsx  UserAddPage.tsx
logs/: app.log.2026-04-07  app.log.2026-04-08  app.log.2026-04-12
migrations/: 20260405163001_create_users.sql  20260406000000_create_token_blacklist.sql  20260413021000_create_table.sql
src/: lib.rs  logging.rs  main.rs  router.rs
src/api/: auth.rs  mod.rs  user.rs
src/auth/: hash.rs  jwt.rs  mod.rs
src/db/: mod.rs  pool.rs  token_blacklist.rs  user.rs  valkey.rs
src/db/repository/: mod.rs  user.rs
src/handlers/: auth.rs  user.rs
src/middleware/: auth.rs
src/models/: auth.rs  mod.rs  user.rs
src/services/: api_service.rs  auth.rs  mod.rs  service.rs  tasks_service.rs  user.rs
src/services/api_service/: auth.rs  mod.rs  user.rs
src/services/system_service/: init_service.rs  mod.rs
src/tasks/: mod.rs
static/assets/: index-By1n2GTa.css  index-C52LjiZy.js  index-DMzNW7q3.css
