[package]
name = "depface"
version = "0.1.0"
edition = "2021"

[dependencies]
# 非同期ランタイム
tokio = { version = "1.0", features = ["full"] }
# APIサーバ
axum = "0.7"
tower-http = { version = "0.6", features = ["fs"] }
# データベース (PostgreSQLを想定、SQLiteなら変更可)
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "macros"] }
# シリアライズ・データ変換
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 認証・セキュリティ
argon2 = "0.5"
jsonwebtoken = "9.0"
# 時刻操作・環境変数
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
# エラーハンドリング
thiserror = "1.0"
# ハッシュ文字列生成
password-hash = "0.5"
# ロギングの生成
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "chrono"] }
tracing-appender = "0.2"

[dev-dependencies]
# テストの直列実行（環境変数の競合防止）
serial_test = "3.0"